tests/predator-regre/test-0137.err
test-0137.c:116:20: note: writing heap graph to 'test-0137.c-116-0000.dot'...
test-0137.c:116:20: note: writing heap graph to 'test-0137.c-116-0001.dot'...
test-0137.c:67:5: error: dereferencing object of size 4B out of bounds
test-0137.c:67:5: note: the pointer being dereferenced points 4B above a static variable of size 8B
test-0137.c:84:19: note: from call of val_from_node()
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:67:5: error: dereferencing object of size 4B out of bounds
test-0137.c:67:5: note: the pointer being dereferenced points 4B above a static variable of size 8B
test-0137.c:84:19: note: from call of val_from_node()
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:67:5: error: dereferencing object of size 4B out of bounds
test-0137.c:67:5: note: the pointer being dereferenced points 4B above a static variable of size 8B
test-0137.c:84:19: note: from call of val_from_node()
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:67:5: error: dereferencing object of size 4B out of bounds
test-0137.c:67:5: note: the pointer being dereferenced points 4B above a static variable of size 8B
test-0137.c:84:19: note: from call of val_from_node()
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:67:5: error: dereferencing object of size 4B out of bounds
test-0137.c:67:5: note: the pointer being dereferenced points 4B above a static variable of size 8B
test-0137.c:84:19: note: from call of val_from_node()
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:70:26: warning: end of function gl_seek_max() has not been reached
test-0137.c:103:11: note: from call of gl_seek_max()
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:95:13: warning: end of function gl_sort() has not been reached
test-0137.c:118:12: note: from call of gl_sort()
test-0137.c:112:5: note: from call of main()
test-0137.c:120:20: note: writing heap graph to 'test-0137.c-120-0000.dot'...
test-0137.c:123:20: note: writing heap graph to 'test-0137.c-123-0000.dot'...
